# ruipiresc-python-portfolio

./: .gitignore  README.md  cli.py  requirements.txt  setup.cfg  setup.py
portfolio/: __version__.py  broker.py  company.py  exceptions.py  gmail.py  holding.py  portfolio.py  statement.py  trade.py  trading212.py  utils.py
portfolio/services/: alpha_vantage.py  iex_cloud.py  yahoo_finance.py
