[bumpversion]
current_version = 0.1.0.dev0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{build}
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:file:./portfolio/__version__.py]
search = version: {current_version}
replace = {new_version}
